[gd_scene load_steps=3 format=3 uid="uid://tsw3ilff7h8o"]

[ext_resource type="Script" path="res://Scripts/intro.gd" id="1_u4hiw"]
[ext_resource type="PackedScene" uid="uid://be410ygscs100" path="res://Scene/tutorial_dogg.tscn" id="2_b0p2k"]

[node name="Intro" type="Node2D"]

[node name="Intro" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u4hiw")

[node name="New Game" type="Button" parent="Intro"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 160.0
offset_bottom = 95.0
action_mode = 0
text = "New Game"
icon_alignment = 1

[node name="Exit" type="Button" parent="Intro"]
layout_mode = 0
offset_left = 208.0
offset_top = 40.0
offset_right = 304.0
offset_bottom = 88.0
text = "Exit
"

[node name="Credits" type="Button" parent="Intro"]
layout_mode = 0
offset_left = 144.0
offset_top = 128.0
offset_right = 240.0
offset_bottom = 159.0
text = "Credits"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(3.375, 3.375)

[node name="TutorialDogg" parent="." instance=ExtResource("2_b0p2k")]
position = Vector2(166, 115)

[connection signal="ready" from="Intro" to="TutorialDogg" method="_on_intro_ready"]
[connection signal="pressed" from="Intro/New Game" to="Intro" method="_on_new_game_pressed"]
[connection signal="pressed" from="Intro/Exit" to="Intro" method="_on_exit_pressed"]
[connection signal="pressed" from="Intro/Credits" to="Intro" method="_on_credits_pressed"]
